# POC-Chakravyuha

./: CMakeLists.txt  ChakravyuhaReport.h  ControlFlowFlatteningPass.cpp  EmitReportPass.cpp  EmitReportPass.h  FakeCodeInsertionPass.cpp  FakeCodeInsertionPass.h  InitialIRMetricsPass.cpp  InitialIRMetricsPass.h  LICENSE.md  Makefile  README.md  StringEncryptionPass.cpp  StringEncryptionPass.h  create_comparison.py  obfuscator.py  run_tests.py  test.c  test_obfuscated.c  test_program.c  test_report.json
samples/: sample.c  sample.cpp
scripts/: run_obfuscation.bat  run_obfuscation.sh
src/: StringEncryptPass.cpp  StringEncryptionPass.cpp
test/: test.c
tests/: test_a.c  test_attributes-c.c  test_attributes.c  test_callbacks-cpp.cpp  test_complex-c.c  test_complex.c  test_complex_nested.c  test_early_return.c  test_enum-switch-cpp.cpp  test_exceptions-cpp.cpp  test_goto.c  test_inheritance-cpp.cpp  test_lambda-cpp.cpp  test_loops-cpp.cpp  test_loops.c  test_move-semantics-cpp.cpp  test_multiple-functions-c.c  test_nested-if-c.c  test_phi-c.c  test_phi.c  test_program.c  test_recursive-c.c  test_recursive.c  test_short-circuit-c.c  test_simple-c.c  test_simple-cpp.cpp  test_simple_if.c  test_smart-pointers-cpp.cpp  test_stl-cpp.cpp  test_switch-c.c  test_switch.c  test_templates-cpp.cpp
